# BouncingBall

./: CMakeLists.txt
include/: ball.hpp  ballmanager.hpp
src/: ball.cpp  ballmanager.cpp  main.cpp
test/: unit_test.cpp
